<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".SignInUp.SignIn">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_header">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="100dp"
            android:text="@string/edit"
            android:textColor="@color/mov"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/username"
            android:textColor="@color/mov"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/tvName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:enabled="false"
            android:hint="@string/username"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/tName"
            app:layout_constraintStart_toEndOf="@+id/tName" />


        <EditText
            android:id="@+id/tvEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"

            app:layout_constraintBaseline_toBaselineOf="@+id/eName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvName" />

        <EditText
            android:id="@+id/tvNewPass"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/newPass"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            android:enabled="false"
            app:layout_constraintBaseline_toBaselineOf="@+id/pa2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvOldPass" />

        <EditText
            android:id="@+id/tvOldPass"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/oldPass"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:enabled="false"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/pa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pa" />

        <EditText
            android:id="@+id/tvMobileNumber"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:enabled="false"
            android:hint="@string/mobile_phone"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/mobName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvEmail" />

        <TextView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:drawableRight="@drawable/edit"
            android:text="@string/EditAccount"
            android:textColor="@color/mov"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <TextView
            android:id="@+id/eName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/email"
            android:textColor="@color/mov"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tName"
            app:layout_constraintTop_toBottomOf="@+id/tName" />

        <TextView
            android:id="@+id/mobName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/mobile_phone"
            android:textColor="@color/mov"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/eName"
            app:layout_constraintTop_toBottomOf="@+id/eName" />

        <TextView
            android:id="@+id/pa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="Old  Passward"
            android:textColor="@color/mov"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mobName" />

        <TextView
            android:id="@+id/pa2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="New  Passward"
            android:textColor="@color/mov"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pa" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="100dp"
            android:text="@string/problem"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pa" />

        <TextView
            android:id="@+id/problem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textColor="@color/sta"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.27"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>