<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginTop="170dp"
    android:layout_width="match_parent"
    android:background="#00000000"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="264dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/karla"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/wrieQuit"
                android:textColor="@color/mov"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/sq"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/sq"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/edit_text_sign"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:maxEms="4"
                android:maxLength="4"
                android:letterSpacing="1.5"
                android:textSize="20dp"
                android:fontFamily="@font/karla"
                android:hint="****"
                android:inputType="number"
                android:textColor="@color/mov"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/userNameChange"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/edit_text_sign"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/karla"
                android:hint="@string/username"
                android:inputType="text"
                android:textColor="@color/mov"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sq" />

            <EditText
                android:id="@+id/passwordb"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/edit_text_sign"
                android:drawableLeft="@drawable/ic_lock_input"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="@font/karla"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/mov"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNameChange" />

            <Button
                android:id="@+id/done"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button_selector"
                android:text="@string/done"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordb"
                app:layout_constraintVertical_bias="0.19999999" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>